--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@ const viewData = {
         type: "Text",
         text: "최근 어떤 일을 하고 계신가요?"
     }, {
+        type: "Text",
+        text: "랜! 덤! 질! 문!"
+    }, {
         type: "RandomPick",
         children: [{
             type: "Text",
