--- a/index.html
+++ b/index.html
@@ -21,19 +21,60 @@ const viewData = {
         text: "랜! 덤! 질! 문!"
     }, {
         type: "RandomPick",
-        children: [{
-            type: "Text",
-            text: "갑자기 천억이 생긴다면 무엇을 하고 싶으신가요?"
-        }, {
-            type: "Text",
-            text: "나에게 있어 가장 완벽한 하루란?"
-        }, {
-            type: "Text",
-            text: "조금 특별한 취미가 있다면?"
-        }, {
-            type: "Text",
-            text: "탐라에서 나의 포지션은?"
-        }]
+        children: [
+            { type: "Text", text: "평생 한 음식만 먹어야한다면 무엇을?" },
+            { type: "Text", text: "누군가를 위로해주는 나만의 방법은 무엇인가요?" },
+            { type: "Text", text: "탐라에서 나의 포지션은?" },
+            { type: "Text", text: "스트레스를 푸는 나만의 방법은?" },
+            { type: "Text", text: "인생에 주어진 것 중에 가장 감사한 것은 무엇인가요?" },
+            { type: "Text", text: "월요일 오전반차가 생긴다면 무엇을 하고 출근할건가요?" },
+            { type: "Text", text: "살면서 가장 행복했던 순간은 언제인가요?" },
+            { type: "Text", text: "최근에 구매한 물건 중에 가장 마음에 드는 것은?" },
+            { type: "Text", text: "살면서 내린 가장 무모한 선택은?" },
+            { type: "Text", text: "인생에서 돌아가고 싶은 순간이 있나요?" },
+            { type: "Text", text: "은퇴 이후 꿈꾸는 삶이 있다면?" },
+            { type: "Text", text: "요즘 즐겨 듣는 노래가 있나요?(같이 들어요!)" },
+            { type: "Text", text: "24시간 이내에 지구가 멸망한다면 가장 하고싶은 것은 ?" },
+            { type: "Text", text: "눈물 흘리며 본 영화가 있나요?" },
+            { type: "Text", text: "나만의 소울푸드가 있다면?" },
+            { type: "Text", text: "최근 읽은 책 중 추천해주고 싶은 책이 있나요?" },
+            { type: "Text", text: "혹시 조금 별난 취미가 있나요?" },
+            { type: "Text", text: "여행 좋아하세요? 추천하고 싶은 여행지는?" },
+            { type: "Text", text: "먹부림 좋아하세요? 추천하고 싶은 식당은?" },
+            { type: "Text", text: "나는 이성파인가요, 감성파인가요?" },
+            { type: "Text", text: "당신에게 '완벽한' 하루를 정의해본다면?" },
+            { type: "Text", text: "유명한 사람이 되고 싶나요?" },
+            { type: "Text", text: "지금 당장 여행을 떠날 수 있다면, 어디로 가고 싶나요?" },
+            { type: "Text", text: "태어날 나라를 선택할 수 있다면, 어느 나라에서 태어나고 싶나요?" },
+            { type: "Text", text: "새로 배워보고 싶은게 있나요? (있다면) 왜 배워보고 싶나요?" },
+            { type: "Text", text: "초능력이 하나 생긴다면, 어떤 능력을 갖고 싶나요?" },
+            { type: "Text", text: "갑자기 천억이 생긴다면, 어떤 삶을 살 건가요?" },
+            { type: "Text", text: "심심하고 무료할 때 무엇을 하나요?" },
+            { type: "Text", text: "인생에서 중요하게 생각하는 가치는?" },
+            { type: "Text", text: "존경하는 사람은?(롤모델) 그 이유는?" },
+            { type: "Text", text: "돈, 시간을 생각하지 않아도 된다면 하고 싶은 일은?" },
+            { type: "Text", text: "어떤 사람으로 기억되고 싶은가요?" },
+            { type: "Text", text: "아직 시도하지 않았지만 이루고 싶은 꿈은?" },
+            { type: "Text", text: "슬럼프를 극복하는 당신의 방법은?" },
+            { type: "Text", text: "요즘 오랜시간 고민하는 것은?" },
+            { type: "Text", text: "지금 하는 일을 시작하게 된 이유?" },
+            { type: "Text", text: "자기 자랑 3가지(거만하게!)" },
+            { type: "Text", text: "내가 나이 들었다고 느낄 때?" },
+            { type: "Text", text: "당신에게 힘을 주는 말은?" },
+            { type: "Text", text: "좋아하는 계절은?" },
+            { type: "Text", text: "핸드폰 액정에 쓰여 있는 것은? (핸드폰 바탕화면을 무엇으로 설정해두었나요?)" },
+            { type: "Text", text: "내 자신에 점수를 매긴다면?" },
+            { type: "Text", text: "사랑 vs 우정" },
+            { type: "Text", text: "내가 사랑하는 사람 vs 나를 사랑하는 사람" },
+            { type: "Text", text: "가장 기억에 남는 꿈은?" },
+            { type: "Text", text: "요즘 즐겨하는 게임은? 추천해주세요" },
+            { type: "Text", text: "힘들 때 가장 힘이 되었던 위로는 어떤 것이었나요?" },
+            { type: "Text", text: "좌우명이 있다면?" },
+            { type: "Text", text: "닉네임, 무슨뜻이에요?" },
+            { type: "Text", text: "당신의 최애는?+_+ " },
+            { type: "Text", text: "가장 만나고 싶은 가상 캐릭터는?" },
+            { type: "Text", text: "스트레스를 떨쳐내기 위한 자신만의 방법은?" }
+        ]
     }, {
         type: "Text",
         text: "추가 질문 타임!"
